(fix): updated z-indexes to various things so they display as they should There's still the issue of dots appearing on top of the trapezoids

--- a/src/app/modules/homepage/homepage.component.scss
+++ b/src/app/modules/homepage/homepage.component.scss
@@ -14,6 +14,14 @@ m-homepage {
     }
 
     &.m-homepage__formExperiment {
+      .m-marketing__body {
+        @media screen and (max-width: $max-mobile) {
+          &::after {
+            top: 990px !important;
+          }
+        }
+      }
+
       .m-homepage__appButtons {
         margin-left: 0 !important;
       }
@@ -46,6 +54,10 @@ m-homepage {
           position: initial;
           z-index: 0;
 
+          @media screen and (max-width: $max-mobile) {
+            padding: 0 30px 0;
+          }
+
           &::before {
             transform: none;
             clip-path: polygon(72% 0, 100% 0, 100% 21%, 42% 91%);
@@ -56,6 +68,9 @@ m-homepage {
 
             @include m-theme() {
               background: themed($m-amber-medium);
+            }
+            @media screen and (max-width: $max-mobile) {
+              z-index: -1;
             }
           }
 
@@ -84,6 +99,10 @@ m-homepage {
             @include m-theme() {
               background: themed($m-aqua);
               border-color: themed($m-aqua) !important;
+            }
+
+            @media screen and (max-width: $max-mobile) {
+              width: 100%;
             }
 
             &.m-homepage__joinButton--first {
@@ -115,27 +134,28 @@ m-homepage {
             &::after {
               left: 0;
               right: 0;
-              bottom: -626px;
-              bottom: -698px;
+              top: 1200px;
             }
           }
         }
       }
 
       .m-homepage__registerForm {
-        transform: translate(-54px, -19px);
-
-        &::before {
-          transform: none;
-          clip-path: polygon(73% 0, 100% 0, 100% 28%, 39% 93%);
-          bottom: -115px;
-          right: -688px;
-          top: -123px;
-
-          @include m-theme() {
-            background: themed($m-amber-medium);
-          }
+        @media screen and(min-width: $min-tablet) {
+          transform: translate(-54px, -19px);
         }
+
+        //&::before {
+        //  transform: none;
+        //  clip-path: polygon(73% 0, 100% 0, 100% 28%, 39% 93%);
+        //  bottom: -115px;
+        //  right: -688px;
+        //  top: -123px;
+        //
+        //  @include m-theme() {
+        //    background: themed($m-amber-medium);
+        //  }
+        //}
 
         display: block;
         filter: drop-shadow(-1px 0px 8px rgba(50, 50, 0, 0.5));
@@ -149,6 +169,10 @@ m-homepage {
           padding: 58px 37px;
 
           clip-path: polygon(0 0, 100% 8px, 99% 95%, 0% 98%);
+
+          @media screen and (max-width: $max-mobile) {
+            width: 300px;
+          }
 
           h3 {
             font-size: 24px;
@@ -298,9 +322,6 @@ m-homepage {
 
             @media screen and (min-width: $min-tablet) {
               transform: translate(-4px, -17px);
-            }
-            @media screen and (max-width: $max-mobile) {
-              min-width: 333px;
             }
           }
 
